simple fix xml